# qdeploy

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  pyproject.toml  ty.toml
web/: labb.yaml
web/common/: urls.py  views.py
web/common/templates/: base.html
web/common/templates/auth/: login.html  logout.html
web/common/templates/homepage/: index.html
web/mysite/: settings.py  urls.py
web/qdeploy/: apps.py  models.py  urls.py  views.py
web/qdeploy/migrations/: 0001_initial.py  0002_rename_repo_project_repo_url_and_more.py
web/qdeploy/templates/: base.html
web/qdeploy/templates/dashboard/: index.html
web/qdeploy/templates/homepage/: index.html
web/qdeploy/templates/projects/: create.html
web/tailwindcsstheme/static_src/: package-lock.json  package.json
web/tailwindcsstheme/static_src/src/: styles.css
