[project]
name = "qdeploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.2",
    "djlint>=1.36.4",
    "labbicons>=0.2.0",
    "labbui>=0.2.0",
]
